--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ header.fixed #logo {
 
 #top {
   width: 100%;
-  background-image: url(https\:\/\/yt3\.ggpht\.com\/KJ61DfBlnR5OgDk1vciDyuwfEqXCt-OIQFyPM__nKQQKKCMFkWnGGAauAOzu7QWE26smH68YUg\=w2120-fcrop64\=1\,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj);
+  background-image: url();
   background-blend-mode: multiply;
   background-color: #2e3a44;
   background-size: 5400px;
@@ -190,7 +190,7 @@ header.fixed #logo {
 
 #overview {
   float: left;
-  background-image: url(https://images.unsplash.com/1/work-station-straight-on-view.jpg?ixlib=rb-0.3.5&s=d055e15d0b8fd2de7295b726274d312b&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb);
+  background-image: url();
 
   background-blend-mode: multiply;
   background-color: #403f40;
