--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,7 @@ header.fixed #logo {
 
 #top {
   width: 100%;
-  background-image: url(https\:\/\/yt3\.ggpht\.com\/KJ61DfBlnR5OgDk1vciDyuwfEqXCt-OIQFyPM__nKQQKKCMFkWnGGAauAOzu7QWE26smH68YUg\=w2120-fcrop64\=1\,00005a57ffffa5a8-k-c0xffffffff-no-nd-rj);
+  background-image: url();
   background-blend-mode: multiply;
   background-color: #2e3a44;
   background-size: 5400px;
