--- a/csslog/m.css
+++ b/csslog/m.css
@@ -7,7 +7,7 @@
 
 body {
     width: 99%;
-    background-image: url(https://image.freepik.com/free-vector/abstract-diagonal-lines-striped-orange-background_78474-381.jpg);
+    background-image: url(https://img3.akspic.ru/originals/9/3/0/4/6/164039-galaktika_twitch_banner-podergivanie-veb_banner-potokovoe_multimedia-gejmer-1920x1080.jpg);
     background-blend-mode: multiply;
     background-color: #2e3a44;
     background-size: 1500px;
