--- a/css/musicds.css
+++ b/css/musicds.css
@@ -10,7 +10,7 @@ body {
 
   #overview {
     float: left;
-    background-image: url(https://images.unsplash.com/1/work-station-straight-on-view.jpg?ixlib=rb-0.3.5&s=d055e15d0b8fd2de7295b726274d312b&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb);
+    background-image: url(https://img.freepik.com/free-photo/3d-low-poly-abstract-background-with-connecting-lines-and-dots_1048-11673.jpg?size=626&ext=jpg&ga=GA1.2.1607212094.1598227200);
   
     background-blend-mode: multiply;
     background-color: #403f40;
